# Tracking-Parrot-Ar-Drone

./: .gitignore  CMakeLists.txt  README.md  opencv_install.sh  package.xml  requirements.txt
collection/1-Figures all/: dectection.py
collection/2-figuere moviment/: detectarTriangulos.py  detectarTriangulos.py~
collection/4-face/: detection_face.py
collection/5-body/: detection33.py
collection/OpenCV-Python-Hacks-master/: greenball_tracker.py
collection/detection shapes/: dectection.py  dectection.py~
collection/detection shapes/circle-detection-opencv/circle-detection-opencv/: detect_circles.py  detection2.py  detection3_forma_triangulo.py  videodetection.py
collection/detection shapes/pedestrian-detection/: detect2.py  detection33.py
collection/skin2/: ar.py  dd.cpp  re.py
examples_detections/0-circle/: detect_circles.py
examples_detections/2-figuere moviment/: detectarTriangulos.py
examples_detections/3-ball/: ball_tracking.py
examples_detections/qrcode image/: name.odt
facebookMessenger/: bot.py
launch/: tracking.launch
scripts/: controll.py  keyboard.py  ros_opencv.py  settings.py  track.py  tracking.py  window_control.py
scripts/Detection/: ball.py  body.py  face.py  figure.py  objectStatus.py  object_status.py  qrcode.py  settings_objects.py
scripts/Drone/: drone_commands.py  drone_controller.py  drone_status.py
