<?xml version="1.0"?>
<package>
  <name>Tracking_Parrot_Ar_Drone</name>
  <version>1.0.0</version>
  <description>Realiza tracking de un objeto</description>

  <maintainer email="vitomarcavilte@gmail.com">Vito Marca </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <run_depend>ardrone_autonomy</run_depend>

</package>
